--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\esteb\\AppData\\Roaming\\NetBeans\\16\\build.properties
+user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\15\\build.properties
